--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <div class="item"></div> <img src="img\pexels-alipazani-2681751.jpg" alt="Girlboss lipstic in shade nude" height="200" widht="180"></div>
 </div>
 <div class="con6">
-<div><p>Girlboss lipstic in shade Red</p></div>
-<div><p>Girlboss lipstic in shade Pink</p></div>
-<div><p> Girlboss lipstic in shade Brown</p></div>
-<div><p>Girlboss lipstic in shade nude</p></div>
+<div class="s1"><p>Girlboss lipstic in shade Red</p></div>
+<div class="s2"><p>Girlboss lipstic in shade Pink</p></div>
+<div  class="s3"><p> Girlboss lipstic in shade Brown</p></div>
+<div class="s4"><p>Girlboss lipstic in shade nude</p></div>
 </div>
 </div>
 <div class="container3">
