--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <p class="bitem c">sign up</p>
    </div>
    <div class="con5">
-    <div>
+    <div class="pic1">
     <img src="img\pexels-pixabay-301367.jpg" alt="a picture of multiple shades of lipstics in one glass" height="200"
         width="300">
 </div>       
@@ -48,20 +48,38 @@
 <div class="discription">
     <p>Pictures of our beauty models trying diffrent shades of Girllboss lipstick.</p>
 </div>
-<div class="pictures">
-  <div class="item"> <img src="img\pexels-shiny-diamond-3762840.jpg" alt="Girlboss lipstic in shade Red" height="200" widht="180"></div>
-    
-    <div class="item"><img src="img\pexels-shiny-diamond-3762444.jpg" alt="Girlboss lipstic in shade Pink" height="200" width="180"></div>
-   
-    <div class="item"><img src="img\pexels-zaid-mohammed-86842527-10073456.jpg" alt="Girlboss lipstic in shade Brown" height="200" widht="180"></div>
-    
-    <div class="item"></div> <img src="img\pexels-alipazani-2681751.jpg" alt="Girlboss lipstic in shade nude" height="200" widht="180"></div>
 </div>
-<div class="con6">
-<div class="s1"><p>Girlboss lipstic in shade Red</p></div>
-<div class="s2"><p>Girlboss lipstic in shade Pink</p></div>
-<div  class="s3"><p> Girlboss lipstic in shade Brown</p></div>
-<div class="s4"><p>Girlboss lipstic in shade nude</p></div>
+<div class="illustration">
+<div class="illustrtraion-container">
+<div class="img-container">
+  <div class="item1"> <img src="img\pexels-shiny-diamond-3762840.jpg" alt="Girlboss lipstic in shade Red" height="200" widht="180"></div>
+</div>
+    <p>Girlboss lipstic in shade Red</p>
+
+</div>
+    <div class="illustration-container">
+        <div class="img-container">
+    <div class="item2"><img src="img\pexels-shiny-diamond-3762444.jpg" alt="Girlboss lipstic in shade Pink" height="200" width="180"></div>
+    </div><p>Girlboss lipstic in shade Pink</p>
+   
+    </div>
+<div class="illustration-container">
+    <div class="img-container">
+    <div class="item3"><img src="img\pexels-zaid-mohammed-86842527-10073456.jpg" alt="Girlboss lipstic in shade Brown" height="200" widht="180"></div>
+
+</div>
+        <p> Girlboss lipstic in shade Brown</p>
+    </div>
+
+    <div class="illustration-container">
+        <div class="img-container">
+    <div class="item4"> <img src="img\pexels-alipazani-2681751.jpg" alt="Girlboss lipstic in shade nude" height="200" widht="180"></div></div>
+        <p>Girlboss lipstic in shade nude</p>
+
+</div>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="container3">
